Deploy Apps/Staging-Apps/s-frontend/s-frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-frontend
  namespace: staging
spec:
  replicas: 1
  selector:
    matchLabels:
      name: mern-frontend
      metadata: mern-frontend
  template:
    metadata:
      labels:
        name: mern-frontend
        metadata: mern-frontend
    spec:
      containers:
      - name: mern-frontend
        image: ahmadwizam/s-mern-frontend:1.0
        ports:
        - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: mern-frontend
  namespace: staging
spec:
  #type: LoadBalancer
  ports:
    - port: 3000
      #nodePort: 30080
  selector:
          name: mern-frontend
---
